--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   },
   "devDependencies": {
     "browser-sync": "^2.26.7",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-rename": "^1.4.0",
-    "gulp-sourcemaps": "^2.6.5"
+    "gulp-sass": "^4.0.2",
+    "gulp-sourcemaps": "^2.6.5",
+    "node-sass": "^4.13.1"
   }
 }
